# pyOCCT_binder

./: .gitignore  NOTES.txt  README.md  all_includes.h  bind.py  config.txt  run.py  setup.py
.github/workflows/: ci.yml
binder/: __init__.py  common.py  core.py  core2.py
binder/clang/: cindex.py
generate/: all_includes.h  config.txt  gen_includes.py  run.py  run2.py  test_all_includes.h
pybinder/: common.py  core.py  utilities.py
test/: CMakeLists.txt  all_includes.h  config.txt  environment.yml  test_pybinder.py
test/expected/: Test.cxx  TestSplit.cxx  TestSplit_2.cxx  bind_Test_Template.hxx
test/include/: TestSplit_Module.h  Test_Class.h  Test_Enum.h  Test_Getter.h  Test_KeepAlive.h  Test_Params.h  Test_Pname.h  Test_Template.h  pyTest_Common.hxx
